--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.hibernate.ddl-auto= update
 spring.h2.console.enabled=true
 # default path: h2-console
 spring.h2.console.path=/h2-ui
+
+jwt.secret=secretkey123
