changed database path

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto= update
 spring.h2.console.enabled=true
 # default path: h2-console
-spring.h2.console.path=/h2-ui
+spring.h2.console.path=/h2
 
 jwt.secret=secretkey123
